<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#efefef"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#efefef"
            android:text="@string/main_label_a"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_score_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:text="0"
            android:textAlignment="center"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_one_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_one_point" />

        <Button
            android:id="@+id/button_two_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_two_points" />

        <Button
            android:id="@+id/button_three_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_tree_points" />

        <Button
            android:id="@+id/button_six_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="reset"
            android:text="@string/button_six_points" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#dfdfdf"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dfdfdf"
            android:text="@string/main_label_b"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_score_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:text="0"
            android:textAlignment="center"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_one_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_one_point" />

        <Button
            android:id="@+id/button_two_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_two_points" />

        <Button
            android:id="@+id/button_three_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_tree_points" />

        <Button
            android:id="@+id/button_six_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_six_points" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/button_reset"
                android:textColor="#ff0044"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>